// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli project > cli project @my-scope/my-project --ts @other-scope/my-tsconfig 1`] = `
{
  "/project/packages/@my-scope/my-pkg/package.json": "{
  "name": "@my-scope/my-project",
  "type": "module",
  "sideEffects": [],
  "exports": {
    ".": "./lib/index.js",
    "./*": "./lib/*.js"
  },
  "scripts": {
    "clear": "rimraf lib"
  },
  "files": [
    "package.json",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "lib",
    "!lib/**/*.d.ts.map",
    "!lib/**/*.test.js",
    "!lib/**/*.test.d.ts",
    "!lib/**/*.test.d.ts.map",
    "!lib/**/*.test.js.map",
    "!lib/tests",
    "!.tsbuildinfo"
  ]
}",
  "/project/packages/@my-scope/my-pkg/src": null,
  "/project/packages/@my-scope/my-pkg/tsconfig.json": "{
  "extends": "@other-scope/my-tsconfig/tsconfig.json",
  "compilerOptions": {
    "tsBuildInfoFile": "./lib/.tsbuildinfo",
    "rootDir": "src",
    "rootDirs": [
      "src"
    ],
    "outDir": "lib",
    "incremental": true,
    "composite": true
  },
  "include": [
    "src"
  ]
}
",
}
`;

exports[`cli project > cli project @my-scope/my-project --ts my-tsconfig 1`] = `
{
  "/project/packages/@my-scope/my-pkg/package.json": "{
  "name": "@my-scope/my-project",
  "type": "module",
  "sideEffects": [],
  "exports": {
    ".": "./lib/index.js",
    "./*": "./lib/*.js"
  },
  "scripts": {
    "clear": "rimraf lib"
  },
  "files": [
    "package.json",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "lib",
    "!lib/**/*.d.ts.map",
    "!lib/**/*.test.js",
    "!lib/**/*.test.d.ts",
    "!lib/**/*.test.d.ts.map",
    "!lib/**/*.test.js.map",
    "!lib/tests",
    "!.tsbuildinfo"
  ]
}",
  "/project/packages/@my-scope/my-pkg/src": null,
  "/project/packages/@my-scope/my-pkg/tsconfig.json": "{
  "extends": "@my-scope/my-tsconfig/tsconfig.json",
  "compilerOptions": {
    "tsBuildInfoFile": "./lib/.tsbuildinfo",
    "rootDir": "src",
    "rootDirs": [
      "src"
    ],
    "outDir": "lib",
    "incremental": true,
    "composite": true
  },
  "include": [
    "src"
  ]
}
",
}
`;

exports[`cli project > cli project @my-scope/my-project 1`] = `
{
  "/project/packages/@my-scope/my-pkg/package.json": "{
  "name": "@my-scope/my-project",
  "type": "module",
  "sideEffects": [],
  "exports": {
    ".": "./lib/index.js",
    "./*": "./lib/*.js"
  },
  "scripts": {
    "clear": "rimraf lib"
  },
  "files": [
    "package.json",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "lib",
    "!lib/**/*.d.ts.map",
    "!lib/**/*.test.js",
    "!lib/**/*.test.d.ts",
    "!lib/**/*.test.d.ts.map",
    "!lib/**/*.test.js.map",
    "!lib/tests",
    "!.tsbuildinfo"
  ]
}",
  "/project/packages/@my-scope/my-pkg/src": null,
  "/project/packages/@my-scope/my-pkg/tsconfig.json": "{
  "extends": "@my-scope/tsconfig/tsconfig.json",
  "compilerOptions": {
    "tsBuildInfoFile": "./lib/.tsbuildinfo",
    "rootDir": "src",
    "rootDirs": [
      "src"
    ],
    "outDir": "lib",
    "incremental": true,
    "composite": true
  },
  "include": [
    "src"
  ]
}
",
}
`;

exports[`cli project > cli project -t es2020 1`] = `
{
  "/project/packages/@my-scope/my-pkg/package.json": "{
  "name": "@my-scope/my-pkg",
  "type": "module",
  "sideEffects": [],
  "exports": {
    ".": "./lib/index.js",
    "./*": "./lib/*.js"
  },
  "scripts": {
    "clear": "rimraf lib"
  },
  "files": [
    "package.json",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "lib",
    "!lib/**/*.d.ts.map",
    "!lib/**/*.test.js",
    "!lib/**/*.test.d.ts",
    "!lib/**/*.test.d.ts.map",
    "!lib/**/*.test.js.map",
    "!lib/tests",
    "!.tsbuildinfo"
  ]
}",
  "/project/packages/@my-scope/my-pkg/src": null,
  "/project/packages/@my-scope/my-pkg/tsconfig.json": "{
  "extends": "@my-scope/tsconfig/tsconfig.json",
  "compilerOptions": {
    "tsBuildInfoFile": "./lib/.tsbuildinfo",
    "rootDir": "src",
    "rootDirs": [
      "src"
    ],
    "outDir": "lib",
    "target": "es2020",
    "incremental": true,
    "composite": true
  },
  "include": [
    "src"
  ]
}
",
}
`;

exports[`cli project > cli project 1`] = `
{
  "/project/packages/@my-scope/my-pkg/package.json": "{
  "name": "@my-scope/my-pkg",
  "type": "module",
  "sideEffects": [],
  "exports": {
    ".": "./lib/index.js",
    "./*": "./lib/*.js"
  },
  "scripts": {
    "clear": "rimraf lib"
  },
  "files": [
    "package.json",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "lib",
    "!lib/**/*.d.ts.map",
    "!lib/**/*.test.js",
    "!lib/**/*.test.d.ts",
    "!lib/**/*.test.d.ts.map",
    "!lib/**/*.test.js.map",
    "!lib/tests",
    "!.tsbuildinfo"
  ]
}",
  "/project/packages/@my-scope/my-pkg/src": null,
  "/project/packages/@my-scope/my-pkg/tsconfig.json": "{
  "extends": "@my-scope/tsconfig/tsconfig.json",
  "compilerOptions": {
    "tsBuildInfoFile": "./lib/.tsbuildinfo",
    "rootDir": "src",
    "rootDirs": [
      "src"
    ],
    "outDir": "lib",
    "incremental": true,
    "composite": true
  },
  "include": [
    "src"
  ]
}
",
}
`;

exports[`cli project > cli project my-project --ts my-tsconfi -i 1`] = `
{
  "/project/packages/@my-scope/my-pkg": null,
}
`;

exports[`cli project > cli project my-project --ts my-tsconfig 1`] = `
{
  "/project/packages/@my-scope/my-pkg/package.json": "{
  "name": "my-project",
  "type": "module",
  "sideEffects": [],
  "exports": {
    ".": "./lib/index.js",
    "./*": "./lib/*.js"
  },
  "scripts": {
    "clear": "rimraf lib"
  },
  "files": [
    "package.json",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "lib",
    "!lib/**/*.d.ts.map",
    "!lib/**/*.test.js",
    "!lib/**/*.test.d.ts",
    "!lib/**/*.test.d.ts.map",
    "!lib/**/*.test.js.map",
    "!lib/tests",
    "!.tsbuildinfo"
  ]
}",
  "/project/packages/@my-scope/my-pkg/src": null,
  "/project/packages/@my-scope/my-pkg/tsconfig.json": "{
  "extends": "my-tsconfig/tsconfig.json",
  "compilerOptions": {
    "tsBuildInfoFile": "./lib/.tsbuildinfo",
    "rootDir": "src",
    "rootDirs": [
      "src"
    ],
    "outDir": "lib",
    "incremental": true,
    "composite": true
  },
  "include": [
    "src"
  ]
}
",
}
`;

exports[`cli project > cli project my-project 1`] = `
{
  "/project/packages/@my-scope/my-pkg/package.json": "{
  "name": "my-project",
  "type": "module",
  "sideEffects": [],
  "exports": {
    ".": "./lib/index.js",
    "./*": "./lib/*.js"
  },
  "scripts": {
    "clear": "rimraf lib"
  },
  "files": [
    "package.json",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "lib",
    "!lib/**/*.d.ts.map",
    "!lib/**/*.test.js",
    "!lib/**/*.test.d.ts",
    "!lib/**/*.test.d.ts.map",
    "!lib/**/*.test.js.map",
    "!lib/tests",
    "!.tsbuildinfo"
  ]
}",
  "/project/packages/@my-scope/my-pkg/src": null,
  "/project/packages/@my-scope/my-pkg/tsconfig.json": "{
  "extends": "tsconfig/tsconfig.json",
  "compilerOptions": {
    "tsBuildInfoFile": "./lib/.tsbuildinfo",
    "rootDir": "src",
    "rootDirs": [
      "src"
    ],
    "outDir": "lib",
    "incremental": true,
    "composite": true
  },
  "include": [
    "src"
  ]
}
",
}
`;
